--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-<div1 style="font-size: xx-large;">To the best girl ever</div1>
+<div1 style="font-size: xx-large;">loooook who's theree???</div1>
 </head>
 <body>
-    <h1>best of luck</h1>
+    <h1>Isn't she the cutest and most adorable kid ever??</h1>
 
 </body>
 
